--- a/bio7.html
+++ b/bio7.html
@@ -40,43 +40,157 @@
    <h1> Saints Cosmas and Damian</h1>
    <h1> (2 Dec / 22 Hatoor) </h1> 
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Kozman.jpg" alt="Kozman">
-  <p style="text-align: left; font-size: 18px;">
-They were farmers from Esna, whom Arianus the governor met during his fourth visit to the city. This was after the massacre he carried out in Esna, in which the entire city was martyred, as will be detailed in the section titled "The Martyrs of Esna" on the St-Takla.org website.
-These farmers were walking on the city bridge, carrying their axes, and they shouted in a loud voice:
-"We are Christians, believers in the Lord Christ."
-The soldiers said to the governor:
-“Do you not hear these peasant men shouting?”
-The governor replied:
-“We have already returned our swords to their sheaths, for they have become blunt from excessive killing.”
-When the faithful farmers heard this—and since they were already carrying their axes on their shoulders—they said to the governor:
-“Kill us with our own axes!”
-So the governor commanded his soldiers to kill them with the axes.
-They stretched out their necks on a large stone at that place, and the soldiers beheaded them with the axes.
-(You can read more about these saints on the St-Takla.org website in the sections on Saints’ Lives, the Synaxarium, Church History, and the Sayings of the Fathers.)
-This occurred on the 11th day of the Coptic month of Tout.
-After the end of the persecutions, a tomb was built for them.
-Over the centuries, the tomb disappeared, until in the late 19th century, a resident of Esna named the late Mikhail El-Rashidi had a vision one night.
-In the vision, he was instructed to go to the northern part of the town (Bahari El-Balad) and dig in a specific spot marked with lime, where he would find the remains of the three saints, and that he should build a tomb for them.
-Mikhail went to the local ruler to ask permission to build the tomb. The ruler initially refused, but later granted permission after having a vision himself, instructing him to allow the construction.
-Indeed, the tomb was built, and next to it was a palm grove. However, in recent years, buildings have encroached upon the grove, and only a few palm trees remain.
-To this day, the tomb still exists and is cared for by the El-Rashaidah family of Esna.
-Very often, a fragrant scent of incense comes from the tomb, especially on Sunday evenings.
-</p>
+ 
+<div dir="ltr" style="text-align: left; font-size: 18px; font-family: Arial, sans-serif; line-height: 1.8;">          <h2>Their Upbringing:</h2>
+  <p>
+    Saints Cosmas and Damian, along with their brothers Anthimus, Leontius, Eutropius, and their mother Theodota, lived in the city of Agas, a port in the Cilician province of Arabia in Asia Minor, at the end of the third century AD.
+  </p>
+  <p>
+    We know little about their father, but their mother Theodota, meaning "Gift of God," was devout, loving to strangers, and compassionate. She was widowed and raised her children with reverence for the Lord and love of virtue.
+  </p>
+
+  <h2>Faithful Physicians:</h2>
+  <p>
+    The family was very wealthy. Cosmas and Damian learned the art of medicine and treated patients without charging fees, while their other brothers went into the wilderness to live ascetically.
+  </p>
+  <p>
+    With their skill, Cosmas and Damian combined their medical practice with faith in God, healing the sick through extraordinary power alongside using medicines. Their daily motto was: "Whether you eat or drink or whatever you do, do all to the glory of God" (1 Corinthians 10:31).
+  </p>
+
+  <h2>The Silverless Physicians:</h2>
+  <p>
+    Their success, under God’s grace, led them to live a life of simplicity and prayer. They feared attachment to silver and the resulting evils. They became known as "the silverless physicians," and pagans mockingly called them “enemies of silver.”
+  </p>
+  <p>
+    Their honesty, devout life, and reliance on the Lord attracted many pagan patients to Christianity.
+  </p>
+  <p>
+    A hymn about the martyrs, sung in the West, says: "They practiced medicine through divine gift, giving health to all the weary freely, healing the sick and the sorrowful, offering help to those in need without payment. They restored sight to the blind, healed the lame, and helped the deaf. It is said they cared for both humans and animals, showing mercy equally."
+  </p>
+
+  <h2>Healing of Palladia:</h2>
+  <p>
+    Palladia spent all she had on many doctors until she became impoverished. Hearing about these two saints, she turned to them. They prayed for her and gave her medicine. Once she was healed, she offered a small gift to Saint Damian, but he refused it, as she was needy.
+  </p>
+
+  <h2>Witness to Christ:</h2>
+  <p>
+    When Diocletian renounced the faith and commanded the worship of idols, Governor Lysias summoned them and questioned them about their preaching of Christ. They answered that they chose medicine not for profit but to benefit others, and that Christ gave them the power to heal, so many believed.
+  </p>
+  <p>
+    The governor became very angry and asked about their brothers. He summoned them with their mother and commanded them to offer incense to idols, but they refused. He tried to entice them with worldly promises, and when they did not comply, he threatened them for disobedience to the emperor.
+  </p>
+  <p>
+    The blessed brothers replied that they were Christians and, for their faith, they would endure persecution, eagerly anticipating suffering and death to meet Christ. The governor ordered the five to be pressed in a press. The saints encouraged their younger brothers to remain faithful. Seeing their steadfastness, he cast them into the sea in chains, but God glorified them, sending an angel to break the chains and save them, washing them ashore safely.
+  </p>
+
+  <h2>Healing of the Governor:</h2>
+  <p>
+    When Lysias heard of this, he summoned them again, cursing them and the holy name of God with his pagan gods. But an angel struck him, and evil spirits entered, torturing him.
+  </p>
+  <p>
+    The saints were summoned and prayed for him to receive forgiveness from Christ, and he was immediately healed.
+  </p>
+
+  <h2>Return to Torture:</h2>
+  <p>
+    The governor soon returned to his cruelty, ordering Saints Cosmas and Damian to be hung on crosses and stoned. Yet the stones bounced off them harmlessly. Their brothers were bound and thrown between the crosses to be shot with arrows, but the arrows rebounded on the attackers. Finally, all were forced to flee.
+  </p>
+  <p>
+    The governor then had them tied and thrown into a fiery furnace for three days and nights, then cast into a boiling bath. Finally, they were placed on heated iron beds, but God preserved them alive and unharmed.
+  </p>
+  <p>
+    When the governor grew tired of torturing them, he sent them to the king, who tortured them as well. Their mother comforted and encouraged them. The king rebuked her for her devotion, ordered her beheaded, and she received the crown of life. Her body was left unburied, but Saint Damian cried out to the people: "Is there no one among you merciful to cover this widow’s body and bury it?" Then Boutros bin Romanos took her body, buried it, and honored it.
+  </p>
+  <p>
+    When the king learned what Boutros had done, he ordered him exiled to Egypt, where he received the crown of martyrdom. The next day, the king ordered the beheading of Saints Cosmas, Damian, and their brothers, granting them the crown of life in the Kingdom of Heaven.
+  </p>
+  <p>
+    After the persecution ended, many churches were built in their honor, where God showed many signs and wonders.
+  </p>
+  <p>
+    The Western Church commemorates them on September 27 and on the fourth Thursday of Lent. The Coptic Church commemorates them on Hathor 22 and Boona 22 each year. May the prayers of these saints be with us all. Amen.
+  </p>
+</div>
 
 
-<p style="text-align: right; font-size: 18px; direction: rtl; unicode-bidi: isolate;">
-<span dir="rtl">
-هم فلاحون من إسنا، التقى بهم أريانوس الوالي في زيارته الرابعة للمدينة. بعد المذبحة التي أجراها في إسنا، والتي استشهد فيها كل المدينة كما سنرى عند الحديث عن "شهداء إسنا" هنا بموقع الأنبا تكلاهيمانوت. كانوا يسيرون على جسر المدينة ويحملون فؤوسهم، فصاحوا بصوت عظيم: "نحن مسيحيون مؤمنون بالسيد المسيح".
-قال الجند للوالي: "أما تسمع هؤلاء الرجال الفلاحين الذين يصيحون؟ " فقال الوالي: "قد أرجعنا سيوفنا إلى أغمادها إذ تلمت من كثرة القتل. وإذ عرف الفلاحون المؤمنون بذلك وكانوا يحملون فؤوسهم على أعناقهم، قالوا للوالي: "اقتلنا بفؤوسنا!" فأمر الوالي جنده أن يقتلوهم بفؤوسهم، فمدوا أعناقهم على حجر كبير كان في ذلك الموضع، وقطع الجند رؤوسهم بالفؤوس. (ستجد المزيد عن هؤلاء القديسين هنا في موقع الأنبا تكلا في أقسام السير والسنكسار والتاريخ وأقوال الآباء). وكان ذلك في الحادي عشر من شهر توت.
-بنيت لهم مقبرة بعد انتهاء الاضطهادات. ومع مرور القرون زالت آثار المقبرة، إلى أن رأى أحد سكان إسنا في أواخر القرن التاسع عشر، وهو المرحوم ميخائيل الرشيدي، رؤيا في إحدى الليالي تطلب إليه أن يذهب إلى بحري البلد ويحفر في مكان معين محدد بالجير فسيجد رفات هؤلاء القديسين الثلاثة، وأن يقوم ببناء مقبرة لهم.
-ذهب ميخائيل إلى الحاكم يستأذنه في بناء المقبرة فرفض في بداية الأمر لكنه عاد فصرح له بذلك بعد أن شاهد رؤيا تطلب إليه أن يأمر بالتصريح بالبناء.
-وبالفعل بُنيت المقبرة وبجوارها حقل من النخيل، وإن كانت المباني في السنوات الأخيرة قد زحفت على حقل النخيل ولم يبقَ سوى قلة من النخيل.
-ولا تزال هذه المقبرة قائمة تهتم بها عائلة "الرشايدة" بإسنا. كثيرًا ما تخرج منها رائحة بخور عطرة، خاصة في عشية الأحد.
-</span>
-</p>
+    
+
+<div dir="rtl" style="text-align: right; font-size: 18px; font-family: 'Amiri', serif; line-height: 1.8;">  <h2>نشأتهم:</h2>
+  <p>
+    عاش القديسون قزمان ودميان وإخوتهما أنثيموس Anthimus ولاونديوس Leontius وابرابيوس Eutropius وأمهم ثاؤذوتي في مدينة أجاس وهي ميناء بمقاطعة كيليكية بمنطقة أرابيا بآسيا الصغرى، في نهاية القرن الثالث الميلادي.
+  </p>
+  <p>
+    لا نعرف شيئا عن الوالد، أما الأم ثأوذوتي أو ثيؤدوره (ثيئودوتا Theodota) وتعني "عطية الله"، فكانت تتقي الله، مُحبة للغرباء، رحومة. ترمّلت وأولادها بعد أطفال، فربّتهم وعلّمتهم مخافة الرب ومحبة الفضيلة.
+  </p>
+
+  <h2>طبيبان مؤمنان:</h2>
+  <p>
+    كانت هذه الأسرة غنية جدًا. تعلّم قزمان ودميان صناعة الطب، وكانا يعالجان المرضى بلا أجر، أما إخوتهما فمضوا إلى البرية وترهّبوا.
+  </p>
+  <p>
+    مع مهارة الصبيان قزمان ودميان كانا يهتمان في عملهما بالإيمان بالله طبيب النفوس والأجساد. وكان الله يهبهما نعمة خاصة، فيشفيان المرضي بقوة فائقة للطبيعة مع استخدامهما للأدوية. كانا شعارهما في حياتهما اليومية وعملهما "إن أكلتم أو شربتم أو فعلتم أي شيء فافعلوا كل شيء لمجد الله" (1كو31:10).
+  </p>
+
+  <h2>الطبيبان بلا فضة:</h2>
+  <p>
+    دفعهما نجاحهما في عملهما خلال نعمة الله بالأكثر إلى ممارسة حياة الكفاف مع الصلاة والأمانة، فكانا يخشيان تعلق نفسيهما بمحبة الفضة فيسقطان في شرور كثيرة. اشتهرا بلقب الطبيبين بلا فضة، ودعاهما الوثنيون مبغضي الفضة.
+  </p>
+  <p>
+    أمانتهما في عملهما وحياتهما التقوية مع اتكالهما علي الرب جذب كثير من المرضى الوثنيين إلي الإيمان المسيحي.
+  </p>
+  <p>
+    جاء في التسبحة خاصة بالشهيدين التي كانت تُنشد في الغرب: "كانا الدارسين فن الطب يهبان خلال العطية الإلهية جميع المتعبين الصحة مجانًا، يهبان الشفاء للمرضي والحزانى، يقدمون لمن يشكو ما ينتظره منهما بلا مقابل. يهبان النظر للعميان، والشفاء للعرج والمساعدة للصُم. قيل عنهما أنهما كانا يهتمان بعلاج الإنسان والحيوان، إذ كانا يترفقان ببني البشر كما بالحيوانات".
+  </p>
+
+  <h2>شفاء بالاديا:</h2>
+  <p>
+    أنفقت بالاديا كل ما لديها على أطباء كثيرين حتى افتقرت. وأخيرًا سمعت عن هذين القديسين فلجأت إليهما. صليا من أجلها وقدما لها الدواء، وإذ شفيت قدمت هدية بسيطة للقديس دميان فرفضها بشدة، إذ كانت محتاجة.
+  </p>
+
+  <h2>شهادة القديسين للسيد المسيح:</h2>
+  <p>
+    لما ارتد دقلديانوس عن الإيمان وأمر بعبادة الأوثان، استدعاهما ليسياس الحاكم ودخل معهما في حوار عن كرازتهما بالإيمان بالسيد المسيح وهما طبيبان. أجابا أنهما اختارا مهنة الطب لا لمكسبٍ ماديٍ بل لمنفعة الجميع، وأن ربنا يسوع المسيح يهبهما قوة الشفاء، لذلك آمن كثيرون به.
+  </p>
+  <p>
+    ثار الحاكم عليهما جدًا وإذ استعلم منهما عن مكان اخوتهما، استحضرهم ومعهم أمهم، وأمرهم أن يبخروا للأوثان فلم يطيعوه. حاول الحاكم أن يغريهم بوعود زمنية باطلة، وإذ لم يستجيبوا بدأ يهددهم بالاتهام أنهم يعصون أمر الإمبراطور.
+  </p>
+  <p>
+    أجابه الإخوة المباركون أنهم مسيحيون، ومن أجل إيمانهم يُضطهدون، وأنهم منذ زمن طويل يشتهون احتمال الآلام حتى الموت، بل وكانوا يتعجلون هذا الأمر إذ يريدون الالتقاء بالسيد المسيح. فأمر أن يُعصر الخمسة في المعصرة. كان القديسان يشجعان اخوتهم الصغار علي التمسك بالإيمان، وإذ رأي الحاكم ثباتهم أمر بطرحهم في البحر وهم مقيّدون بالسلاسل، لكن الرب تمجد فيهم، فأرسل ملاكه وحطّم السلاسل وأنقذهم حيث دفعتهم الأمواج إلي الشاطئ سالمين.
+  </p>
+
+  <h2>شفاء الحاكم:</h2>
+  <p>
+    إذ سمع ليسياس بما حدث معهم استدعاهم وصار يلعنهم ويلعن اسم الله القدوس بآلهته الوثنية، لكن ملاكًا لطمه فدخلت فيه أرواح شريرة كانت تعذبه.
+  </p>
+  <p>
+    اشتدت الآلام فاستدعي القديسين وطلب العفو منهما. تحنّنا عليه وصليا من أجله أن يغفر له السيد المسيح، فشُفي للحال.
+  </p>
+
+  <h2>عودة للعذابات:</h2>
+  <p>
+    سرعان ما عاد الحاكم إلي عنفه وقسوته، فأمر بتعليق القديسين قزمان ودميان علي صليبين ورجمهما بالحجارة، فكانت الحجارة لا تكاد تمس جسديهما حتى ترتد بقوة علي الراجمين. أما اخوتهما فقُيدا وأُلقيا بين الصليبين ليُرموا بالسهام، فكانت السهام ترتد علي ضاربيها. أخيرًا اضطر الكل أن يهربوا.
+  </p>
+  <p>
+    أمر الحاكم بحل وثاقهم وإلقائهم في أتون النار ثلاثة أيام وثلاث ليالٍ ثم طرحهم في مستوقد حمام. وأخيرًا وضعهم على أسرّة من الحديد محمّاة، فأقامهم الرب أحياء بغير فساد.
+  </p>
+  <p>
+    ولما تعب الوالي من تعذيبهم أرسلهم إلى الملك فعذبهم هو أيضًا. وكانت أمهم تُعزيهم وتُصبّرهم. انتهرها الملك فوبّخته على قسوته وعلى عبادة الأوثان، فأمر بقطع رأسها ونالت إكليل الحياة، وبقى جسدها مطروحًا لم يجسر أحد أن يدفنه. فصرخ القديس دميان في الحاضرين قائلًا: "يا أهل المدينة أليس فيكم أحد ذو رحمة، فيستر جسد هذه العجوز الأرملة ويدفنها؟" عند ذلك تقدم بقطر بن رومانوس وأخذه وكفنه ثم دفنه.
+  </p>
+  <p>
+    لما علم الملك بما عمله بقطر أمر بنفيه إلى ديار مصر، وهناك نال إكليل الشهادة. وفي الغد أمر الملك بقطع رؤوس القديسين قزمان ودميان وإخوتهما فنالوا إكليل الحياة في ملكوت السموات.
+  </p>
+  <p>
+    وبعد أن انقضى زمان الاضطهاد، بُنيت لهم كنائس عديدة، أظهر الرب فيها آيات وعجائب كثيرة.
+  </p>
+  <p>
+    تُعيد لهم الكنيسة الغربية في 27 سبتمبر، وفي الخميس الرابع من الصوم الكبير. وتعيد لهم الكنيسة القبطية في يوم 22 هاتور و22 بؤونة من كل عام. صلوات هؤلاء القديسين تكون معنا جميعًا. آمين.
+  </p>
+</div>
 
 
     <a href="index.html">← Back to main page</a>
   </div>
 </body>
 </html>
+
