--- a/bio12.html
+++ b/bio12.html
@@ -40,50 +40,63 @@
    <h1> St. Ana Simon the Hermit </h1>
    <h1> (10 Aug / 4 Mesra) </h1> 
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Simona.jpg" alt="Simona">
-    <p style="text-align: left; font-size: 18px;">
-The life of the holy monk Archpriest Fanous El-Anba Bola will forever remain a shining lamp and a luminous beacon—an exemplary model of what a humble ascetic monk should be, concerned with nothing but the salvation of his soul and the souls of all who encounter his deep love.
-<br><br>
-The saint was born on April 5, 1929, in the village of Dafsh, Samalout District, Minya Governorate, and passed away on April 19 of this year after a life filled with spiritual and physical struggle and hard work. He journeyed in asceticism and self-denial, following the footsteps of the early fathers of monasticism and living out the commandments of the Holy Bible. He loved all without distinction, never turning away anyone who sought his guidance or prayers. He was extremely humble, calling even the smallest child "Uncle So-and-so" with gentleness and angelic kindness, especially since he left the world to join the monastery at a young age—around 15 years old.
-<br><br>
-He knocked on the door of monasticism in 1944 and received its blessing in 1947, becoming a monk at the age of 18. The day of his passing is considered a divine and special appointment, as it came just one day before the 69th anniversary of his monastic life, which was planned to be celebrated on April 20. Archpriest Fanous was ascetic to the point of harshness on himself. In addition to the hard labor he performed—most notably cutting stones, which caused injuries to his hands that he wrapped in cloth—he refused to eat the food offered to him by his loved ones or the monastery. He would leave it before him until it spoiled, as a form of breaking bodily desires and subduing the flesh, thereby rising in spirit to lofty heights. Many clergy and laypeople became closely connected to him and his prayers.
-<br><br>
-Since receiving the priesthood in 1951 and then the rank of archpriest in 1960, he never abandoned the altar or the Divine Liturgy, even after suffering severe joint stiffness in his feet, which forced him to move around in a wheelchair during the last ten years or so of his blessed life. Despite his illness, he persisted in celebrating the liturgies, especially in the presence of his spiritual children, among them: Anba Daniel, the abbot of the monastery; Anba Yostos, bishop and abbot of the Monastery of St. Anthony in the Red Sea; Anba Yoannis, bishop of Assiut; Anba Botros, general bishop; Anba Kyrillos, bishop of Nag Hammadi; Anba Youssef, bishop of Bolivia; Anba Agathon, bishop of Brazil; and Anba Antonios, metropolitan of Jerusalem when he was still a monk.
-<br><br>
-In addition to his leg ailments, he suffered in his later years from heart problems, which culminated in a 95% blockage in his main artery. This led to recurring lung infections that reached their peak during his final treatment period at a hospital in Cairo (from December until his passing). It was reported that he suffered a severe heart attack last February, during which his heart stopped beating for about seven minutes before it returned to life.
-<br><br>
-He lived all his life in his old cell within the ancient monastery, which had stairs leading up to it, before later moving to one of the new cells in the monastery's mountain area due to his health condition and the need to move by wheelchair. He lived during the papacies of several patriarchs and met: Pope Cyril VI at the monastery's residence in Boush; Pope Shenouda III twice (the first in the early 1990s during the late Pope's visit to the monastery, and the second at the Cathedral in Anba Rewis); and finally Pope Tawadros II during his recent visit to the Monastery of St. Paul. He was spiritually connected to all the saints of the Church, especially the Virgin Mary and the Archangel Michael, and he took St. Paul the Anchorite as a role model for his spiritual life, closely mirroring his biography and virtues.
-<br><br>
-He came from a blessed family: he had a pious sister named Mary (one year older than him), who reposed in her virginity. His other sister, Hannah, passed away before he entered the monastery. His brother, Hanna, passed away in the 1980s, leaving behind blessed sons and daughters. He loved animals and cared for them, inspired by the verse: "A righteous man cares for the life of his animal." He would feed and care for them, and even the cats he tended to become his companions in solitude, especially when he was left alone in the monastery for extended periods in his early years.
-<br><br>
-After his repose, his spiritual children, led by Anba Daniel, carried him to his beloved monastery. Thousands of his admirers gathered to receive the blessing of the “Angel of the Wilderness,” the “Elder of the Monks,” and the “Man of Miracles with Many Gifts.” His holy body was prayed over in the presence of many bishops and monks, especially from the Monasteries of St. Paul and St. Anthony.
-<br><br>
-In his farewell message, His Grace Bishop Yoannis delivered a deep spiritual word titled: “Who is this coming up from the wilderness?”:
-<br>
-Our dearest father… we congratulate you on your safe arrival to your eternal home. Eternity was ever in your heart, and you understood it more deeply than all of us. You fixed your eyes on Christ and strove greatly until… the world died completely in your heart. You reached a very high level of holiness and spiritual discernment. Truly, you were the fragrance of Christ, attracting everyone with that sweet aroma. You did not preach to us with words but with your life and your fragrant biography. What you taught us has become a life path in our hearts that we will live by for the rest of our days.
-</p>
+   
 
-<p style="text-align: right; font-size: 18px; direction: rtl; unicode-bidi: isolate;">
-<span dir="rtl">
-ستظل سيرة الراهب القديس القمص فانوس الأنبا بولا نبراسًا وسراجًا منيرًا، ونموذجًا كاشفًا لما يجب أن يكون عليه الراهب الناسك المتواضع، الذي لا يهمّه شيء سوى خلاص نفسه وخلاص كل من يلمس محبته العميقة.
-<br><br>
-وُلد القديس في 5 أبريل 1929 بقرية دفش، مركز سمالوط بمحافظة المنيا، وتنيّح في 19 أبريل الماضي بعد حياة مليئة بالجهاد الروحي والجسدي والعمل الشاق، عَبَرها في نسك وتقشّف، مقتديًا بآباء الرهبنة الأولى، ومنفذًا وصايا الكتاب المقدس. كان محبًا للجميع دون تمييز، لا يردّ أحدًا من طالبي إرشاده وصلاته. واتّسم بتواضع جم، فكان ينادي أصغر طفل بـ”يا عم فلان” بحنو ورفق ملائكي، خصوصًا أنه ترك العالم وذهب إلى الدير في سن صغيرة – نحو 15 عامًا.
-<br><br>
-طرق باب الرهبنة عام 1944، ونال بركتها عام 1947، إذ ترهّب وهو في الثامنة عشرة من عمره. ويُعدّ يوم نياحته اختيارًا إلهيًا مميزًا، حيث سبق بيوم واحد فقط الاحتفال بالذكرى الـ69 لرهبنته، والتي كان مزمعًا إحياؤها في 20 أبريل. كان القمص فانوس ناسكًا إلى حد القسوة على نفسه. فبالإضافة إلى الأعمال الشاقة التي كان يقوم بها، وعلى رأسها تقطيع الحجارة (والذي سبّب له إصابات في يده فكان يلفها بقطع قماش)، كان يرفض تناول الأطعمة التي يجلبها له محبّوه أو يقدمها له الدير، تاركًا إياها أمامه حتى تفسد، كنوع من كسر الشهوة وإذلال الجسد، فارتفع في الروح إلى درجات سامية جعلت الكثيرين من الإكليروس والشعب يرتبطون به وبصلواته.
-<br><br>
-منذ نيله درجة الكهنوت عام 1951، ثم رتبة القمصية عام 1960، لم يبتعد عن المذبح ولا عن صلوات القداس الإلهي، حتى بعدما أُصيب بخشونة شديدة في قدميه اضطرته إلى التنقّل على كرسي متحرّك في آخر عشر سنوات تقريبًا من حياته المباركة. ورغم مرضه، كان يواظب على القداسات، خصوصًا بحضور أبنائه الروحيين، ومنهم: الأنبا دانيال رئيس الدير، الأنبا يسطس أسقف ورئيس دير الأنبا أنطونيوس بالبحر الأحمر، الأنبا يوأنس أسقف أسيوط، الأنبا بطرس الأسقف العام، الأنبا كيرلس أسقف نجع حمادي، الأنبا يوسف أسقف بوليفيا، الأنبا أغاثون أسقف البرازيل، والأنبا أنطونيوس مطران القدس حينما كان راهبًا.
-<br><br>
-إلى جانب أمراض قدميه، عانى في سنواته الأخيرة من أزمات قلبية، بلغت ذروتها بإصابته بانسداد بنسبة 95% في الشريان الرئيسي، مما أدّى إلى التهابات رئوية متكررة، بلغت أقصاها خلال فترة علاجه الأخيرة بإحدى مستشفيات القاهرة (من ديسمبر حتى نياحته). وقد أُشيع أنه تعرّض لأزمة قلبية حادة في فبراير الماضي، توقف قلبه خلالها سبع دقائق قبل أن يعود للنبض.
-<br><br>
-أقام طوال حياته في قلايته القديمة داخل الدير الأثري، والتي كانت تُصعد إليها بدرجات، ثم انتقل لاحقًا إلى إحدى القلالي الجديدة بجبل الدير لتناسب وضعه الصحي. عاصر عدة بطاركة، والتقى: البابا كيرلس السادس في مقر الدير ببوش، البابا شنودة الثالث مرتين (أولهما في أوائل التسعينيات أثناء زيارته للدير، والثانية في الكاتدرائية المرقسية بالأنبا رويس)، وأخيرًا البابا تواضروس الثاني أثناء زيارته الأخيرة لدير الأنبا بولا. كان مرتبطًا روحانيًا بقديسي الكنيسة، خاصة السيدة العذراء مريم ورئيس الملائكة ميخائيل، واتّخذ الأنبا بولا قدوة ومثالًا لحياته، مقتربًا كثيرًا من سيرته وفضائله.
-<br><br>
-ينتمي إلى أسرة مباركة: له أخت بارة تُدعى مريم (أكبر منه بعام واحد)، ناحت في بتوليتها. أما أخته الأخرى حنة، فتنيّحت قبل دخوله الدير. وشقيقه حنا، تنيّح في ثمانينيات القرن الماضي، وترك أبناءً وبنات مباركين. وكان يحب الحيوانات ويهتم بها، مستوحيًا من قول الكتاب: "الصديق يراعي نفس بهيمته": فكان يطعمها ويرعاها، حتى أن القطط التي اهتم بها كانت تأنس وحدته، حينما كان يُترك بمفرده في الدير لفترات طويلة في بداياته.
-<br><br>
-بعد نياحته، حمله أبناؤه بقيادة الأنبا دانيال إلى ديره العامر، واحتشد الآلاف من محبيه لنوال بركته، ووداعه، وتمت الصلاة على جسده الطاهر في حضور عدد كبير من الآباء الأساقفة والرهبان، خصوصًا من ديري الأنبا بولا والأنبا أنطونيوس.
-وفي كلمته الوداعية، قال نيافة الحبر الجليل الأنبا يوأنس بعنوان:"من هذه الطالعة من البرية؟":
-<br>
-أبانا الحبيب جدًا... نهنئك بسلامة الوصول إلى بيتك الأبدي. فكم كانت الأبدية في قلبك، وقد فهمت أكثر من جميعنا، فثبتّت عينيك على المسيح، وجاهدت كثيرًا حتى... مات العالم في قلبك تمامًا، فوصلتَ إلى درجة عالية من القداسة والكشف الروحي. وكنت بالحقيقة رائحة المسيح الذكية، فاجتذبت الكل بهذه الرائحة. لم تعظنا بالكلمات، بل بحياتك وسيرتك العطرة، وما علمتنا إياه صار منهجًا في قلوبنا نحياه طوال أيامنا.
-</span>
-</p>
+<div dir="rtl" style="text-align: right; font-size: 18px; font-family: 'Amiri', serif; line-height: 1.8;">
+  <h2>نشأة القديسة أناسيمون</h2>
+  <p>
+    قيل أن أناسيمون كانت ابنة ملك الروم وحيدة وتقية، قرأت كثيرًا عن سير الآباء فأحبت الحياة النسكية، وكانت تسلك بروح إنجيلي تقوي وهي في القصر. وإذ توفى والدها أقيمت ملكة بغير رضاها، إذ كانت تود الحياة الرهبانية.
+  </p>
+
+  <h2>خروجها إلى البرية</h2>
+  <p>
+    مرّ عام على تجليسها ملكة خلاله قدمت الكثير للفقراء والمحتاجين وحررت الكثير من العبيد، وأخيرًا قررت أن تترك كل شيء وتتفرغ للعبادة. كتبت رسالة للأب البطريرك تركتها في حجرتها، وخلعت ملابسها لترتدي ثوبًا بسيطًا، وخرجت عارية القدمين تتسلل من القصر في منتصف الليل لتسير في البرية.
+  </p>
+  <p>
+    حاربتها أفكار العودة للقصر لكنها أصرت أن تحتمل كل قسوة البرية متعبدة لله، وفجأة أثناء صلاتها شاهدت أسدًا يقترب منها، فصلت إلى الله ورشمت عليه بعلامة الصليب، فهدأ. التف حولها عدد من الأسود الذين تلاطفوا معها، وشعرت وكأنها ملكة على الوحوش، لكنها أرادت أن تعيش في الصف الأخير، فذهبت إلى مصر واقتربت من دير النساء المسمى دير إرميا، وتظاهرت بالجنون، فاستقبلتها الراهبات بحذر وسمحت لها بخدمتهم.
+  </p>
+
+  <h2>الأنبا دانيال في دير إرميا</h2>
+  <p>
+    في إحدى الليالي قرع الراهب باب الدير، وعند سؤاله قيل إنه جاء مع الأنبا دانيال قس البرية. ذهب الأب دانيال لرؤية "الهبيلة" فلم تهتم، لكنه لاحظ نورًا يخرج من يديها والملائكة تحيط بها. أسرع التلميذ لإخبار الرئيسة التي اعتذرت للراهبة. في الصباح اختفت وتركَت ورقة تقول فيها أنها اختارت الابتعاد عن الدير والراهبات لتعيش حياة التوبة والخدمة.
+  </p>
+
+  <h2>كاهن بالإسكندرية</h2>
+  <p>
+    في فجر خميس العهد، لاحظ كاهن بالإسكندرية رائحة بخور قوية داخل الكنيسة، فدخل الهيكل ووجد شخصًا يقف بخشوع، فسقط أمامه. أعطاها بعض البركة لاستخدامها في القداس الإلهي. بعد عام، قابل الكاهن نفس الشخص خارج المدينة عند الباب الغربي، ثم في العام التالي وجدها في كنيسة رائعة، وأخبِره بأنها العذراء القديسة الملكة أناسيمون، التي تجتمع مع السواح سنويًا من خميس العهد حتى أحد القيامة.
+  </p>
+  <p>
+    أراد الكاهن أن يبقى معهم، لكن أناسيمون أخبرته بضرورة العودة إلى كنيسته لرعاية شعب الله، وظل يزورها سنويًا حتى قرب نياحة الكاهن.
+  </p>
+</div>
+
+<div dir="ltr" style="text-align: left; font-size: 18px; font-family: Arial, sans-serif; line-height: 1.8;">    
+  <h2>Early Life of Saint Anasimoun</h2>
+  <p>
+    It is said that Anasimoun was the only daughter of the Roman king, pious and devout. She read much about the lives of the fathers and loved the monastic life, walking in an evangelical spirit even while in the palace. When her father passed away, she was crowned queen against her will, as she wished for a monastic life.
+  </p>
+
+  <h2>Departure to the Wilderness</h2>
+  <p>
+    A year passed after her coronation, during which she gave generously to the poor, freed many slaves, and finally decided to leave everything to dedicate herself fully to worship. She wrote a letter to the Patriarch, left it in her chamber, changed into simple clothes, and left the palace barefoot in the middle of the night to go into the wilderness.
+  </p>
+  <p>
+    Thoughts of returning to the palace tried to dissuade her, but she endured the harshness of the wilderness for God. One day, she saw a lion approaching her; she prayed to God and made the sign of the cross, and it calmed. Many lions gathered around her, affectionate, making her feel as if she were queen of the beasts. Yet she wished to serve humbly, so she traveled to Egypt, approaching the women’s monastery called the Monastery of Jeremiah, pretending to be insane. The nuns cautiously allowed her to serve them.
+  </p>
+
+  <h2>Encounter with Anba Daniel at the Monastery of Jeremiah</h2>
+  <p>
+    One night, a monk knocked at the monastery door, saying he came with Anba Daniel, the desert priest. Anba Daniel went to see the “foolish” woman, who paid him no attention. Yet he noticed a light emanating from her hands, surrounded by angels. The disciple quickly informed the abbess, who apologized to her. In the morning, the nuns found that she had disappeared, leaving a note explaining that she chose to live apart from them to devote herself fully to repentance and service.
+  </p>
+
+  <h2>Priest in Alexandria</h2>
+  <p>
+    On Holy Thursday morning, a priest in Alexandria noticed a strong incense scent in the church and went to find its source. He found a person standing reverently before the altar. The priest gave some blessing (aparxh) for use in the Divine Liturgy. A year later, he met the same person outside the city at the western gate, and the following year found her in a magnificent church. He was told that she was the Virgin Saint Queen Anasimoun, who joins the pilgrims annually from Holy Thursday until Easter Sunday.
+  </p>
+  <p>
+    The priest wished to stay with them, but Anasimoun told him he must return to his church to shepherd God’s people. She continued visiting him annually until the priest’s repose.
+  </p>
+</div>
 
 
 
@@ -91,3 +104,4 @@ Our dearest father… we congratulate you on your safe arrival to your eternal h
   </div>
 </body>
 </html>
+
