--- a/bio13.html
+++ b/bio13.html
@@ -40,32 +40,68 @@
    <h1> Saint Simon the Tanner </h1>
    <h1> (28 Nov / 18 Hatoor) </h1> 
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Simon.jpg" alt="Zaka">
-    <!-- Zacchaeus the Tax Collector -->
-<p style="text-align: left; font-size: 18px;">
-It is likely that his name is a Hebrew abbreviation of "Zachariah" (Luke 19:1–10). He was a wealthy Jewish man from Jericho and the chief tax collector there. The Jews considered him a sinner because he served the pagan Roman authorities and cooperated with them. When he heard that Christ was passing by, he climbed a sycamore tree, and in his heart were thoughts and desires which Christ knew. So Jesus stayed at his house that day. Under the influence of the Holy Spirit, salvation came to him and his household. The phrase "he also is a son of Abraham" does not refer to his natural lineage, but rather that he became a partner with Abraham in faith and in the promises.
-<br><br>
-Some believe that his great declaration—giving half of his wealth to the poor and restoring fourfold to anyone he had defrauded—reveals two things:
-<br>
-First, the beginning of a new life,
-<br>
-Second, a life of integrity and purity, distinct from the lives of his fellow tax collectors.
-</p>
 
+    
+<div dir="ltr" style="text-align: left; font-size: 18px; font-family: Arial, sans-serif; line-height: 1.8;">    
+  <h2>Life of Saint Simon the Tanner</h2>
+  <p>
+    Many details about this saint are not precisely known, but history confirms he lived in Babylon (Old Egypt) during the time of Patriarch Anba Abram the Syrian (975–979 AD) and under Caliph Al-Muizz li-Din Allah, the first ruler of the Fatimid state in Egypt.
+  </p>
+  <p>
+    His trade was tanning leather, and he also made shoes and similar items. A famous story tells that one day a beautiful woman came to him to repair her shoes. While she removed her shoes, her legs were exposed, and his eyes looked at them with desire. In response, he immediately struck one of his eyes with the awl, following the Lord’s command: “If your right eye causes you to sin, pluck it out and throw it away... for it is better for you that one of your members perish, and not your whole body be cast into hell” (Matt 5:28–29). 
+  </p>
+  <p>
+    He literally obeyed the command, though the Church does not permit or teach this. It was a personal act of simplicity, and the Church forgave him. Saint Simon the Tanner was ascetic and devout, known for prayer, caring for the elderly and sick, bringing them water daily, and distributing bread and food to the needy in the region. He was extremely humble with strong faith.
+  </p>
 
-<p style="text-align: right; font-size: 18px; direction: rtl; unicode-bidi: isolate;">
-<span dir="rtl">
-ربما كان اسم عبري اختصارًا "زكريا" (لو 19: 1-10)، وهو رجل من أغنياء اليهود في أريحا ورئيس لجباة الضرائب هناك. كان اليهود يعتبرونه خاطئًا باعتباره يخدم الحكام الرومان الوثنيين ويتعاون معهم. وإذ عرف بمرور المسيح صعد على جميزة وفي قلبه أفكار ورغبات عرفها المسيح فمكث عنده ذلك النهار، وتحت تأثير الروح القدس حصل له ولبيته الخلاص، ولا يراد بالقول "إذ هو أيضًا ابن إبراهيم" أنه كان من نسله حسب الطبيعة بل أنه صار شريكًا له في الإيمان والمواعيد.
-<br><br>
-ويظن بعضهم أن إعلانه العظيم من إعطاء نصف أمواله للمساكين ورده أربعة أضعاف لمن وشى بهم إنما يكشف عن أمرين:
-<br>
-أولًا: بداية حياة جديدة،
-<br>
-ثانيًا: يشف عن حياة نزيهة عفيفة اختلفت عن حياة زملائه جُباة الضرائب.
-</span>
-</p>
+  <h2>The Miracle of Moving Mokattam Mountain</h2>
+  <p>
+    Caliph Al-Muizz li-Din Allah loved scholarly and religious debates. A Jewish man named Ya’qub ibn Kils, who had converted to Islam to gain a position, was hostile to Christians, especially Qozman ibn Mina (“Abu al-Yaman”). One day the Caliph asked the Patriarch to schedule a debate to challenge the Jews. Anba Sawiris, Bishop of Ashmunin, accused the Jews of ignorance, citing the verse: “The ox knows its owner, the donkey its master's crib, but Israel does not know! My people do not understand” (Isaiah 1:3).
+  </p>
+  <p>
+    The Jewish minister became upset and searched the Scriptures for a counter-verse. He found Matthew 17:20: “If you have faith as a mustard seed, you will say to this mountain, 'Move from here to there,' and it will move, and nothing will be impossible for you.” He presented this to the Caliph, challenging Christians to prove the verse, or face accusations that their religion was false.
+  </p>
+  <p>
+    The Caliph gave the Patriarch three options: perform the miracle, convert to Islam, leave the country, or face death. The Patriarch asked for three days and called for fasting and prayer from all the people. On the third day, the Virgin Mary appeared to him and guided him to Saint Simon, the man with the jar, who would perform the miracle.
+  </p>
+  <p>
+    Saint Simon instructed the Patriarch to lead the people in 400 Kyrie eleisons, carrying the Gospels, crosses, and candles, while Simon stood among them. After the Patriarch knelt and marked the mountain with the sign of the cross, the mountain moved, with sunlight appearing beneath it. The clouds dispersed, yet Saint Simon avoided worldly glory and remained humble until his death.
+  </p>
+  <p>
+    May the blessings of his prayers be with us all, and glory to our Lord forever, Amen.
+  </p>
+</div>
+
+<div dir="rtl" style="text-align: right; font-size: 18px; font-family: 'Amiri', serif; line-height: 1.8;">
+  <h2>سيرة القديس سمعان الخراز</h2>
+  <p>
+    غير معروف على وجه التحديد العديد من التفاصيل عن هذا القديس، ولكن التاريخ يؤكد أنه كان موجودًا في بابليون (مصر القديمة) في زمن البطريرك الأنبا إبرآم السرياني (975-979م)، وفي عهد الخليفة المعز لدين الله الفاطمي، أول حكام الدولة الفاطمية في مصر.
+  </p>
+  <p>
+    كانت حرفته دباغة الجلود، ومعها صناعة الأحذية وخلافها. وهناك قصة مشهورة عنه أنه في أحد الأيام جاءت إليه امرأة لتصلح حذاءها، وكانت هذه المرأة جميلة، وبينما هي تخلع حذاءها انكشف ساقاها، فنظر إليهما بعيناه بشهوة، فقام فورًا بضرب إحدى عينيه بالمخراز تنفيذًا لوصية الرب: "إن كانت عينك اليمنى تعثرك، فاقلعها وألقها عنك، لأنه خيرٌ لك أن يهلك أحد أعضائك، ولا يُلقى جسدك كله في جهنم" (مت 5:28-29).
+  </p>
+  <p>
+    نفذ الوصية حرفيًا، ولكن الكنيسة لا تسمح بهذا ولا تعلم به، وإنما كان تصرفًا بحرية وبساطة، فسامحته الكنيسة. كان القديس سمعان الخراز زاهدًا متقشفًا، معروفًا بالصلاة وخدمة الشيوخ والمرضى، ويوصل لهم الماء يوميًا، ويوزع الخبز والطعام على المحتاجين في المنطقة. وكان متواضعًا للغاية وذا إيمان قوي جدًا.
+  </p>
+
+  <h2>معجزة نقل جبل المقطم</h2>
+  <p>
+    كان المعز لدين الله الفاطمي يحب مجالس الأدب والمباحثات الدينية. وكان هناك رجل يهودي متعصب، اعتنق الإسلام لنيل منصبه، اسمه "يعقوب بن كلس"، وكان مبغضًا للمسيحيين، خاصة "قزمان بن مينا المعروف بأبو اليمن". في أحد الأيام أرسل الخليفة للبطريرك ليحدد موعدًا لمحاججة اليهود أمامه، فأخذ معه الأنبا ساويرس أسقف الأشمونين، وبدأ الأسقف باتهام اليهود بالجهل مستشهدًا بآية: "الثور يعرف قانيه، والحمار معلف صاحبه. أما إسرائيل فلا يعرف! شعبي لا يفهم!" (إش 1:3).
+  </p>
+  <p>
+    ازداد الوزير بن كلس غضبًا، وحاول البحث في الإنجيل عن آية لإثبات حقه، فوجد: "لو كان لكم إيمان مثل حبة خردل، تقولون لهذا الجبل انتقل من هنا إلى هناك، فينتقل، ولا يكون شيء مستحيل لديكم" (مت 17:20). عرضها على الخليفة لتحدي المسيحيين، وإلا يعتبر دينهم باطلًا.
+  </p>
+  <p>
+    أعطى الخليفة البطريرك ثلاثة أيام، ونادى بصوم واعتكاف للشعب. في اليوم الثالث ظهرت له العذراء وأرشدته إلى القديس سمعان، الرجل الحامل للجرة، ليكمل المعجزة. أمر القديس البطريرك بالصلاة مع الشعب 400 مرة وحمل الأناجيل والصلبان والشموع، ووقف سمعان معهم بين الناس، ثم رسم البطريرك علامة الصليب على الجبل، فارتفع الجبل وظهرت الشمس تحته، وتلاشت الغمة.
+  </p>
+  <p>
+    هرب القديس سمعان الخراز من المجد الباطل، وظل متواضعًا حتى وفاته. وبركة صلواته تكون مع جميعنا، ولربنا المجد الدائم إلى الأبد، آمين.
+  </p>
+</div>
 
 
     <a href="index.html">← Back to main page</a>
   </div>
 </body>
 </html>
+
